# agentpulse

./: .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  docker-compose.yml  package-lock.json  package.json
services/api/: .dockerignore  AGENTS.md  Dockerfile  pyproject.toml  requirements.txt
services/api/app/: __init__.py  main.py
services/api/app/api/: business_tools_mcp.py  company_tools_mcp.py  deps.py
services/api/app/channels/: __init__.py  router.py
services/api/app/core/: config.py  database.py  http_security.py  logging.py  rate_limit.py  security.py
services/api/app/orchestration/: __init__.py  brief.py  capability_catalog.py  (+5 more)
services/api/tests/: conftest.py  test_agent_spec_api.py  test_agent_spec_tables.py  test_approval_flow.py  test_approval_suspend.py  test_auth_limits.py  test_auto_provision.py  test_business_tools.py  test_capability_catalog.py  test_channels.py  test_channels_api.py  test_discussion.py  test_e2e_brief_lifecycle.py  test_function_loop.py  test_health.py  test_hermes_backend.py  test_hot_path_hermes.py  test_ideas.py  test_idle_think.py  test_local_provisioner.py  test_logging.py  test_main_startup.py  test_model_settings.py  test_profile_provisioner.py  test_provisioning.py  test_reflection.py  test_role_bundles_api.py  test_run_lifecycle.py  test_runner.py  test_runs.py  test_supply.py  test_td11_brief_plan.py  test_td11_company_tools.py  test_td11_scheduler.py  test_td12_security.py  test_team_compiler.py  test_upgrade.py  test_workspace_flow.py
(+137 files in other folders)
