[project]
name = "agentpulse-api"
version = "0.1.0"
description = "AgentPulse backend API"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic-settings==2.7.0",
  "httpx==0.28.1",
  "psycopg[binary]==3.3.4",
  "psycopg_pool==3.3.1",
  "python-jose[cryptography]==3.5.0",
  "alembic==1.18.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
