[project]
name = "agentpulse-api"
version = "0.1.0"
description = "AgentPulse backend API"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi==0.139.2",
  "uvicorn[standard]==0.51.0",
  "pydantic-settings==2.14.2",
  "httpx==0.28.1",
  "psycopg==3.3.4",
  "psycopg_pool==3.3.1",
  "PyJWT[crypto]==2.13.0",
  "alembic==1.18.5",
  "agent-client-protocol==0.9.0",
  "mcp==1.28.1",
  "sse-starlette==3.4.6",
  "starlette==1.3.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
